--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+The code in this project is heavily influenced by the Josh Davis's code found at http://thedavisblog.com/blog/?p=708
+
+----------------README FROM ORIGINAL AUTHER----------------
 Nerdkit Intervalometer
 by Josh Davis
 
